move some files around, create the project for the red pencil kata; added a test, and some implementation code

--- a/RedPencil.Tests/RedPencil.Tests.csproj
+++ b/RedPencil.Tests/RedPencil.Tests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\StringCalculator.Domain\StringCalculator.Domain.csproj" />
+    <ProjectReference Include="..\RedPencil.Domain\RedPencil.Domain.csproj" />
   </ItemGroup>
 
 </Project>
